--- a/style.css
+++ b/style.css
@@ -61,8 +61,11 @@ body {
     font-size: 1.75rem;
     margin: 0;
     padding: 0;
-    max-width: calc(192 * var(--border-width));
+}
+
+main {
     margin: 0 auto;
+    max-width: calc(136 * var(--border-width));
 }
 
 h1 {
@@ -71,8 +74,10 @@ h1 {
     font-weight: 400;
     line-height: 1.625;
     margin: 0 0 1rem;
+    overflow: hidden;
     text-align: center;
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 h1:first-line { text-transform: lowercase }
@@ -210,9 +215,12 @@ ol {
         black 93% /* 7% */
     );
     counter-reset: place;
+    display: flex;
+    flex-direction: column;
     list-style: none;
     margin: 0 var(--border-width);
-    padding: 0;
+    padding: calc(2 * var(--border-width)) 0 0 0;
+    min-height: 100vh;
 }
 
 li {
@@ -221,11 +229,11 @@ li {
 
     align-items: center;
     color: white;
-    column-gap: .5rem;
+    column-gap: calc(2 * var(--border-width));
     counter-increment: place;
     display: flex;
     margin: 0;
-    padding: 1rem;
+    padding: calc(2 * var(--border-width));
     text-shadow: 0 var(--border-width-inv) 0 black,
         var(--border-width) var(--border-width-inv) 0 black,
         var(--border-width) 0 0 black,
@@ -341,7 +349,14 @@ li > span:first-child > span > span > span:after {
 }
 
 li > span:last-child {
-    paint-order: stroke fill;
-    text-shadow: black .063em .063em 0;
-    /* -webkit-text-stroke: .063em black; */
+    background-color: black;
+    padding: .625rem 0 .125rem .625rem;
+    text-shadow: none;
+}
+
+.hidden {
+    visibility: hidden;
+    height: 0;
+    margin: 0;
+    padding: 0;
 }
