--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1 {
     white-space: nowrap;
 }
 
-h1:first-line { text-transform: lowercase }
+h1::first-line { text-transform: lowercase }
 h1 > span:first-of-type, h1 > span:nth-of-type(9), h1 > span:nth-of-type(14) { color: var(--smw-text-red) !important }
 h1 > span:nth-of-type(2), h1 > span:nth-of-type(4), h1 > span:nth-of-type(7), h1 > span:nth-of-type(12) { color: var(--smw-text-blue) }
 h1 > span:nth-of-type(3), h1 > span:nth-of-type(8), h1 > span:nth-of-type(11) { color: var(--smw-text-yellow) }
